<resources>
    <string name="app_name">MonsterWiki</string>
    <string name="action_settings">Settings</string>
    <string name="buttonStory">STORY</string>
    <string name="buttonMyMonster">MES MONSTRES</string>
    <string name="buttonCreateMonster">CRÉER UN NOUVEAU MONSTRE</string>

    <string name="textViewStory">Bienvenue, dans le monde dhyliâl, aventurier!\n\n\nIci certaines créatures peuvent parler et possèdent de grands pouvoirs issues de Daïwa la divine. Ces monstres nous les appellons les Yokaî, ceux sont des créatures fantastiques pour le moins mystèrieuses. Aujourd\'hui tu es en âge de partir à leur recherche et si tu y arrives de les apprivoiser!\n\nEn parcourant ce monde tu découvriras qu\'il existe différents types de Yokaï, ils incarnent la puissant des éléments qui composent notre univers.\n
Il est temps pour toi maintenant de t’engager dans ce dangereux périple, choisis consciencieusement tes compagnons.\n\n\nBonne route et n’aie crainte, nos chemins se croiseront!</string>

    <string name="persoYourMonster">Choisis le type de ton monstre</string>
    <string name="nom">Choisis lui un nom</string>
    <string name="caractéristiques">Choisis lui des caractéristiques</string>
    <string name="monstres">Tes monstres</string>
    <string name="macarte">Ma Super Carte</string>

    <string name="textType">Choisis le type de ton monstre</string>
    <string name="Eau">L\'Eau c\'est la Vie et puis ça mouille!</string>
    <string name="Feu">Le Feu ça brûle</string>
    <string name="Foudre">La Foudre ça élèctrocute</string>
    <string name="Nature">Comment cacher un arbre? dans une fôret</string>
    <string name="Mort">La Mort c\est Mortel comme mon humour</string>
    <string name="Magie">Poudlard ta refuser? venge toi ici!</string>
    <string name="Special">Soit comme forest Gump soit Special</string>
    <string name="Terre">Solide comme un Rock</string>
    <string name="Metal">Full Metal Alchimist</string>
    <string name="Lumiere">Tu as fait un choix éclairer, une vrai lumière</string>
    <string name="ButtonCara">Entrâine le dans l\'arêne !</string>
    <string name="Toast">Ton monstre à besoin d\'un nom pour frimer!</string>

    <string name="Eau1">Eau</string>
    <string name="Feu1">Feu</string>
    <string name="Foudre1">Foudre</string>
    <string name="Nature1">Nature</string>
    <string name="Mort1">Mort</string>
    <string name="Magie1">Magie</string>
    <string name="Special1">Spécial</string>
    <string name="Terre1">Terre</string>
    <string name="Metal1">Métal</string>
    <string name="Lumiere1">Lumière</string>


    <string name="textEditLifetime">Durée de vie</string>
    <string name="textEditForce">Force</string>
    <string name="textEditVitesse">Vitesse</string>
    <string name="textEditStamina">Stamina</string>

    <string name="compteur"></string>
    <string name="erreur"> ATTENTION !! Tu as distribué plus de 500 points </string>
    <string name="suivant"> SUIVANT </string>
    <string name="tooMuch"> ATTENTION tu as seulement 500 pts à distribuer ! </string>

    <string name="recommencer"> RECOMMENCER </string>


</resources>
