<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_customize_monster_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.wcs.monsterwiki.CustomizeMonsterLevel">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stat_life"
        android:layout_marginTop="70dp"
        android:id="@+id/imageViewLifetime"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarVitesse"
        android:layout_alignTop="@+id/Vitesse"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/Vitesse"
        android:layout_marginLeft="40dp"
        android:max="250"
        />

    <TextView
        android:text="@string/textEditLifetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_above="@+id/imageViewForce"
        android:layout_toEndOf="@+id/imageViewLifetime"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stat_speed"
        android:id="@+id/imageViewVitesse"
        android:layout_below="@+id/imageViewForce"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <SeekBar
        android:layout_height="wrap_content"
        android:id="@+id/seekBarLifetime"
        android:layout_width="match_parent"
        android:layout_marginLeft="150dp"
        android:max="250"
        android:layout_below="@+id/textViewLifetime"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stat_power"
        android:layout_marginTop="17dp"
        android:id="@+id/imageViewForce"
        android:layout_below="@+id/imageViewLifetime"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/compteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStamina"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarForce"
        android:layout_marginLeft="150dp"
        android:max="250"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/compteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewForce"
        android:layout_above="@+id/seekBarForce"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/compteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewVitesse"
        android:layout_above="@+id/seekBarVitesse"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/compteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLifetime"
        android:layout_alignTop="@+id/imageViewLifetime"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/textEditVitesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Vitesse"
        android:layout_marginTop="13dp"
        android:layout_alignTop="@+id/imageViewVitesse"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/textEditForce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/imageViewVitesse"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="13dp"
        android:layout_marginRight="200dp" />

    <TextView
        android:text="@string/textEditStamina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stamina"
        android:layout_below="@+id/textViewStamina"
        android:layout_toStartOf="@+id/seekBarVitesse" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarStamina"
        android:layout_marginLeft="150dp"
        android:max="250"
        android:layout_below="@+id/textViewStamina"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stat_stamina"
        android:id="@+id/imageViewStamina"
        android:layout_alignTop="@+id/textViewStamina"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/compteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total"
        android:layout_above="@+id/textViewLifetime"
        android:layout_alignStart="@+id/seekBarLifetime"
        android:layout_marginBottom="26dp" />

    <Button
        android:text="@string/suivant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/suivant"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textViewLifetime" />

    <TextView
        android:text="@string/tooMuch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/suivant"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/tooMuch" />

</RelativeLayout>
